--- a/HEART-BRAIN-LIVER/index.html
+++ b/HEART-BRAIN-LIVER/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HEART AND LIVER CIRRHOSIS</title>
+  <title>HEART AND LIVER CIRRHOSIS AND BRAIN STROKE</title>
   <style>
     * {
       margin: 0;
@@ -138,4 +138,5 @@
     <p>&copy; 2025 Diagnosis Application. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
