--- a/HEART-BRAIN-LIVER/index.html
+++ b/HEART-BRAIN-LIVER/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HEART AND LIVER CIRRHOSIS AND BRAIN STROKE</title>
+  <title>HEART AND LIVER AND BRAIN</title>
   <style>
     * {
       margin: 0;
@@ -140,3 +140,4 @@
 </body>
 
 </html>
+
